# repo-root

./: Cargo.toml  README.md
aln_cli_terminal_v1/: Cargo.toml
aln_cli_terminal_v1/src/: commands.rs  main.rs
aln_syntax_evolver_v1/: Cargo.toml
aln_syntax_evolver_v1/src/: aln_model.rs  cybernetics.rs  file_processor.rs  game_mechanics.rs  lib.rs  monitoring.rs  rego_integration.rs  smart_city.rs  sync_engine.rs  vm_deploy.rs
cybernetic_citizen_stack/: Cargo.toml
cybernetic_citizen_stack/src/: biophysical_profile.rs  identity.rs  lib.rs  policy_bindings.rs  virtual_network.rs
deployment/: aln_advanced_deploy_v1.5.Dockerfile  smart_city_stack_v1.5.Dockerfile
docs/: aln_rego_text_game_docs_v1.5.md  augmented_citizen_stack.md  smart_city_cybernetics.md
smart_city_infra/: Cargo.toml
smart_city_infra/src/: augmented_space.rs  compliance.rs  iot_grid.rs  lib.rs  telemetry.rs
