[package]
name = "aln_syntax_evolver_v1"
version = "1.0.1"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-postgres = { workspace = true }
opentelemetry = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
